[package]
name = "kd_interval_tree"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Implements a K-dimensional interval tree, for fast interval-overlap lookup. Binary-tree based implementation, i.e. O(log(n)) lookups."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "interval_tree_bench"
harness = false
